Project compiles using the new trec-auth library